log

Thu 14 Mar 2024 08:22:48 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
528277c
Thu 14 Mar 2024 08:23:58 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
ef78018
Thu 14 Mar 2024 08:24:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8f02e17
Thu 14 Mar 2024 08:32:04 PM UTC: 
 exercises.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
f121a85
Thu 14 Mar 2024 08:36:26 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
f57f3a6
